--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "e-commerce",
+  "name": "MERN e-commerce",
   "version": "1.0.0",
-  "description": "",
- "type": "module",
+  "description": "MERN Stack E-Commerce Project",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "backend": "nodemon backend/index.js",
     "frontend": "npm run dev --prefix frontend",
-    "dev": "concurrently \"npm run frontend\" \"npm run backend\""
+    "dev": "concurrently \"npm run frontend\" \"npm run backend"
   },
   "keywords": [],
-  "author": "",
+  "author": "Geet Manik",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
